# controlgym

./: .gitignore  LICENSE  README.md  examples.ipynb  pyproject.toml  requirements.txt  setup.py
controlgym/: __init__.py
controlgym/controllers/: __init__.py  h2hinf.py  lqg.py  lqr.py  ppo.py  zero.py
controlgym/envs/: __init__.py  allen_cahn.py  burgers.py  cahn_hilliard.py  convection_diffusion_reaction.py  fisher.py  ginzburg_landau.py  korteweg_de_vries.py  kuramoto_sivashinsky.py  linear_control.py  pde.py  registrations.py  schrodinger.py  utils.py  wave.py
controlgym/envs/linear_control_src/: ac1.mat  ac10.mat  ac2.mat  ac3.mat  ac4.mat  ac5.mat  ac6.mat  ac7.mat  ac8.mat  ac9.mat  bdt1.mat  bdt2.mat  cbm.mat  cdp.mat  cm1.mat  cm2.mat  cm3.mat  cm4.mat  cm5.mat  dis1.mat  dis2.mat  dlr.mat  he1.mat  he2.mat  he3.mat  he4.mat  he5.mat  he6.mat  iss.mat  je1.mat  je2.mat  lah.mat  pas.mat  psm.mat  rea.mat  toy.mat  umv.mat
controlgym/helpers/: __init__.py  data_processing.py  plotting.py
